# oauth2-dioxus-wasm

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  tailwind.config.mjs
assets/: main.css
src/: app.rs  main.rs  router.rs
src/components/: navbar.rs
src/layouts/: security.rs
src/oauth2/: azure.rs  csrf.rs  mod.rs  oidc.rs  params.rs  pkce.rs  storage.rs  token.rs
src/pages/: forbidden.rs  home.rs  mod.rs
styles/: main.css
